Added CF discord webhook.

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,4 @@ mcp_version=20200514-1.15.1
 # Curse properties
 curse_versions=1.15.2
 curse_project=354339
+curse_page=https://www.curseforge.com/minecraft/mc-mods/open-loader
