--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,11 +1,11 @@
 modLoader="javafml"
-loaderVersion="[34,)"
+loaderVersion="[35,]"
 issueTrackerURL="https://github.com/Darkhax-Minecraft/Open-Loader/issues"
 license = "LGPL 2.1"
 
 [[mods]]
 modId="openloader"
-updateJSONURL="https://updates.blamejared.com/get?n=openloader&gv=1.16.3"
+updateJSONURL="https://updates.blamejared.com/get?n=openloader&gv=1.16.4"
 version="${version}"
 displayName="${mod_name}"
 displayURL="${mod_download}"
@@ -18,13 +18,13 @@ ${mod_description}
 [[dependencies.openloader]]
     modId="forge"
     mandatory=true
-    versionRange="[34,)"
+    versionRange="[35,]"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.openloader]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.16.3]"
+    versionRange="[1.16.4]"
     ordering="NONE"
     side="BOTH"
