--- a/gradle.properties
+++ b/gradle.properties
@@ -1,26 +1,15 @@
-# Gralde properties
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
 group=net.darkhax.openloader
 
-# Mod Properties
-mod_version=9.0.
 mod_name=OpenLoader
-mod_vendor=Darkhax
-mod_download=https://www.curseforge.com/minecraft/mc-mods/open-loader
-mod_issues=https://github.com/Darkhax-Minecraft/Open-Loader/issues
-mod_authors=Darkhax
-mod_description=An open source data and resource loader.
+mod_version=1.0
 
-# Dep Versions
+# Deps
 minecraft_version=1.16.5
-forge_version=1.16.5-36.0.15
-mcp_version=20201028-1.16.3
+yarn_mappings=1.16.5+build.9
+loader_version=0.11.3
+fabric_version=0.34.6+1.16
 
 # Curse properties
 curse_versions=1.16.5
-curse_project=354339
 curse_page=https://www.curseforge.com/minecraft/mc-mods/open-loader
-
-# Mixins
-mixin_id=openloader
+curse_project=354339
