--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,20 @@
 buildscript {
-
     repositories {
-    
-        maven { url = 'https://files.minecraftforge.net/maven' }
-        maven {url='https://dist.creeper.host/Sponge/maven'}
-        maven { url 'https://plugins.gradle.org/m2/' }
-        jcenter()
         mavenCentral()
     }
-    
     dependencies {
-    
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
-        classpath 'gradle.plugin.com.matthewprenger:CurseGradle:1.4.0'
-        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
         classpath group: 'com.diluv.schoomp', name: 'Schoomp', version: '1.1.0'
     }
 }
 
-apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'com.matthewprenger.cursegradle'
-apply plugin: 'maven-publish' 
-apply plugin: 'eclipse'
+plugins {
+    id 'fabric-loom' version '0.5-SNAPSHOT'
+	id 'com.matthewprenger.cursegradle' version '1.4.0'
+    id 'maven-publish'
+}
 
 apply from: 'https://raw.githubusercontent.com/MinecraftModDevelopment/Gradle-Collection/master/generic/secrets.gradle'
 apply from: 'https://raw.githubusercontent.com/MinecraftModDevelopment/Gradle-Collection/master/generic/markdown-git-changelog.gradle'
-apply from: 'https://raw.githubusercontent.com/MinecraftModDevelopment/Gradle-Collection/master/minecraft/artifacts.gradle'
-apply from: 'https://raw.githubusercontent.com/MinecraftModDevelopment/Gradle-Collection/master/minecraft/maven_local_nomcp.gradle'
 apply from: 'https://raw.githubusercontent.com/MinecraftModDevelopment/Gradle-Collection/master/generic/patreon.gradle'
 
 import groovy.json.JsonSlurper
@@ -40,161 +28,86 @@ if (project.hasProperty('secretFile')) {
     loadSecrets(new File((String) findProperty('secretFile')))
 }
 
-version = "${mod_version}" + getBuildNumber()
-archivesBaseName = "${mod_name}-${minecraft_version}"
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
-sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
+archivesBaseName = "${project.mod_name}-fabric-${project.minecraft_version}"
+version = project.mod_version + ".${getBuildNumber()}"
 
-minecraft {
+repositories {
 
-    mappings channel: 'snapshot', version: "${mcp_version}".toString()
+    maven {
     
-    if (project.hasProperty('mod_at')) {
-    
-        accessTransformer = file(findProperty('mod_at'))
-    }
-    
-    runs {
-    
-        client {
+        url "https://www.cursemaven.com"
         
-            workingDirectory project.file('run')
-            taskName "${mod_name}".replaceAll("\\s","") + 'Client'
-            arg "-mixin.config=" + project.findProperty('mixin_id') + ".mixins.json"
-            property 'forge.logging.console.level', 'debug'
-            property 'terminal.ansi', 'true' 
-            
-            mods {
-                openloader {
-                    source sourceSets.main
-                }
-            }
-        }
-
-        server {
+        content {
         
-            workingDirectory project.file('run')
-            taskName "${mod_name}".replaceAll("\\s","") + 'Server'
-            arg "-mixin.config=" + project.findProperty('mixin_id') + ".mixins.json"
-            property 'forge.logging.console.level', 'debug'
-            property 'terminal.ansi', 'true' 
-            
-            mods {
-                openloader {
-                    source sourceSets.main
-                }
-            }
+            includeGroup "curse.maven"
         }
     }
 }
 
 dependencies {
 
-    minecraft "net.minecraftforge:forge:${forge_version}"
+    minecraft "com.mojang:minecraft:${project.minecraft_version}"
+    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 }
 
-jar {
-    manifest {
-        attributes([
-            'Timestamp': System.currentTimeMillis(),
-            'Specification-Title': "${mod_name}",
-            'Specification-Vendor': "${mod_vendor}",
-            'Specification-Version': "${version}",
-            'Implementation-Title': project.archivesBaseName,
-            'Implementation-Version': project.version,
-            'Implementation-Vendor' :"${mod_vendor}",
-            'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-            'Built-On-Java': "${System.getProperty('java.vm.version')} (${System.getProperty('java.vm.vendor')})",
-            'Built-On': "${forge_version}",
-            "MixinConfigs": "${mixin_id}.mixins.json"
-        ])
-    }
-}
+loom {
 
-String getBuildNumber() {
-
-    return System.getenv('BUILD_NUMBER') ? System.getenv('BUILD_NUMBER') : System.getenv('TRAVIS_BUILD_NUMBER') ? System.getenv('TRAVIS_BUILD_NUMBER') : '0';
+    refmapName = 'openloader.refmap.json'
 }
 
 processResources {
 
-    from(sourceSets.main.resources.srcDirs) {
-        include 'META-INF/mods.toml'
+    inputs.property "version", project.version
 
-        def credits = "Thanks to my supporters on Patreon. "
-
-        def patreonSupporters = new ArrayList<String>()
-
-        for (entry in getPledges()) {
-
-            def pledge = entry.getValue();
-
-            if (pledge.isValid()) {
-
-                patreonSupporters.add(pledge.getDisplayName())
-            }
-        }
-
-        credits += patreonSupporters.join(', ')
-
-        expand 'version': project.version, 'mod_name': mod_name, 'mod_download': mod_download, 'mod_credits': credits, 'mod_authors': mod_authors, 'mod_description': mod_description
-    }
-
-    from(sourceSets.main.resources.srcDirs) {
+    filesMatching("fabric.mod.json") {
     
-        exclude 'META-INF/mods.toml'
+        expand "version": project.version
     }
 }
+
+tasks.withType(JavaCompile) {
+
+    it.options.encoding = 'UTF-8'
+}
+
 
 curseforge {
 
     apiKey = findProperty('curse_auth') ?: 0 
     def versions = "${curse_versions}".split(', ')
+
     project {
 
         id = "${curse_project}"
-        releaseType = 'alpha'
+        releaseType = 'beta'
         changelog = getGitChangelog() + "\n\nLike the mod? Consider following me on [Twitter](https://twitter.com/darkhaxdev) and joining the [Discord](https://discord.darkhax.net)\n\nHuge thanks to my supporters on [Patreon](https://www.patreon.com/Darkhax?MCChangelog?${mod_name})\n\n" + getPledgeLog()
         changelogType = 'markdown'
-
+        addGameVersion "Fabric"
+        
         versions.each {
 
             addGameVersion "${it}"
         }
 
-        if (project.hasProperty('curse_requirements') || project.hasProperty('curse_optionals')) {
-
-            mainArtifact(jar) {
-
-                relations {
-
-                    if (project.hasProperty('curse_requirements')) {
-                        def requirements = "${curse_requirements}".split(', ')
-                        requirements.each {
-
-                            requiredLibrary "${it}"
-                        }
-                    }
-
-                    if (project.hasProperty('curse_optionals')) {
-                        def optionals = "${curse_optionals}".split(', ')
-                        optionals.each {
-
-                            optionalLibrary "${it}"
-                        }
-                    }
-                }
-            }
+        mainArtifact(file("${project.buildDir}/libs/${archivesBaseName}-${version}.jar"))
+        
+        afterEvaluate {
+            uploadTask.dependsOn(remapJar)
         }
-
-        addArtifact(sourcesJar)
-        addArtifact(javadocJar)
-        addArtifact(deobfJar)
+    }
+    
+    options {
+        forgeGradleIntegration = false;
     }
 }
 
 tasks.getByName("curseforge").doLast {
-    
+
     try {
     
         // Reads the file ID given to us by CurseForge
@@ -204,7 +117,7 @@ tasks.getByName("curseforge").doLast {
         
         def message = new Message();        
         message.setUsername(findProperty('mod_name'));
-        message.setContent("${project.findProperty('mod_name')} ${version} for Minecraft ${findProperty('minecraft_version')} has been released! The download will be public soon.");
+        message.setContent("${project.findProperty('mod_name')} ${version} (Fabric) for Minecraft ${findProperty('minecraft_version')} has been released! The download will be public soon.");
         
         def embed = new Embed();
         embed.addField('Download', "${project.findProperty('curse_page')}/files/$newFileId", false);
@@ -220,70 +133,45 @@ tasks.getByName("curseforge").doLast {
     }
 }
 
-task updateVersionTracker {
+java {
+	withSourcesJar()
+}
 
-    onlyIf {
-    
-        project.hasProperty('versionTrackerAPI')
-    }
-    
-    doLast {
-        def body = [
-            'author': "${project.findProperty('mod_vendor')}",
-            'projectName': "${project.findProperty('mod_name').toLowerCase()}",
-            'gameVersion': "${project.findProperty('minecraft_version')}",
-            'projectVersion': "${version}",
-            'homepage': "${project.findProperty('mod_download')}",
-            'uid': "${project.findProperty('versionTrackerKey')}"
-        ]
-    
-        // Opens a connection to the version tracker API and writes the payload JSON.
-        def req = new URL(project.findProperty('versionTrackerAPI')).openConnection()
-        req.setRequestMethod('POST')
-        req.setRequestProperty('Content-Type', 'application/json; charset=UTF-8')
-        req.setRequestProperty('User-Agent', "${project.findProperty('mod_name')} Tracker Gradle")
-        req.setDoOutput(true)
-        req.getOutputStream().write(JsonOutput.toJson(body).getBytes("UTF-8"))
-
-        // We need to attempt a read in order to actually send the message.
-        println "VersionCheck Status code: ${req.getResponseCode()}"
-        println "VersionCheck Response: ${req.getInputStream().getText()}"
+publishing {
+    publications {
+		mavenJava(MavenPublication) {
+			artifact(remapJar) {
+				builtBy remapJar
+			}
+			artifact(sourcesJar) {
+				builtBy remapSourcesJar
+			}
+		}
+	}
+    repositories {
+        maven {
+            // Sets the maven URL
+            url findProperty('localMaven')
+        }
     }
 }
 
-apply plugin: 'org.spongepowered.mixin'
+String getBuildNumber() {
 
-mixin {
-
-    add sourceSets.main, "${mixin_id}.refmap.json"
+    return System.getenv('BUILD_NUMBER') ? System.getenv('BUILD_NUMBER') : System.getenv('TRAVIS_BUILD_NUMBER') ? System.getenv('TRAVIS_BUILD_NUMBER') : '0';
 }
-
-// Jar Signing
-import net.minecraftforge.gradle.common.task.SignJar
-
-task signJar(type: SignJar, dependsOn: jar) {
-
-    onlyIf {
-    
-        project.hasProperty('keyStore')
-    }
-    
-    if (project.hasProperty('keyStore')) {
-    
-        project.logger.info('Signing jar ' + jar.archivePath.getName());
-    
-        keyStore = project.findProperty('keyStore')
-        alias = project.findProperty('keyStoreAlias')
-        storePass = project.findProperty('keyStorePass')
-        keyPass = project.findProperty('keyStoreKeyPass')
-        inputFile = jar.archivePath
-        outputFile = jar.archivePath
-    }
-
-    else {
-    
-        project.logger.warn('Could not sign ' + jar.archivePath.getName() + '. No keyStore property could be found')
+        
+jar {
+    manifest {
+        attributes([
+            'Timestamp': System.currentTimeMillis(),
+            'Built-On-Java': "${System.getProperty('java.vm.version')} (${System.getProperty('java.vm.vendor')})",
+            'Built-On-Minecraft': project.findProperty('minecraft_version'),
+            'Built-On-Fabric': project.findProperty('loader_version'),
+            'Built-On-Mapping': "yarn-${project.findProperty('yarn_mappings')}",
+            'Built-On-Gradle': gradle.gradleVersion,
+            'Built-On-Loom': buildscript.configurations.classpath.dependencies.find({ it.name.contains('fabric-loom') }).version,
+            'ModLoader': "fabric-${project.findProperty('loader_version')}",
+        ])
     }
 }
-
-build.dependsOn signJar
