--- a/build.gradle
+++ b/build.gradle
@@ -140,6 +140,7 @@ java {
 publishing {
     publications {
 		mavenJava(MavenPublication) {
+            artifactId project.archivesBaseName
 			artifact(remapJar) {
 				builtBy remapJar
 			}
