--- a/gradle.properties
+++ b/gradle.properties
@@ -1,26 +1,16 @@
-# Gralde properties
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
 group=net.darkhax.openloader
+version=10.0
 
-# Mod Properties
-mod_version=9.0.
 mod_name=OpenLoader
-mod_vendor=Darkhax
-mod_download=https://www.curseforge.com/minecraft/mc-mods/open-loader
+mod_author=Darkhax
+mod_id=examplemod
+mod_homepage=https://www.curseforge.com/minecraft/mc-mods/open-loader
+mod_source=https://github.com/Darkhax-Minecraft/Open-Loader
 mod_issues=https://github.com/Darkhax-Minecraft/Open-Loader/issues
-mod_authors=Darkhax
 mod_description=An open source data and resource loader.
 
-# Dep Versions
-minecraft_version=1.16.5
-forge_version=1.16.5-36.0.15
-mcp_version=20201028-1.16.3
+minecraft_version=1.17.1
+forge_version=37.0.83
 
-# Curse properties
-curse_versions=1.16.5
+# CurseForge properties (gradle/curseforge.gradle)
 curse_project=354339
-curse_page=https://www.curseforge.com/minecraft/mc-mods/open-loader
-
-# Mixins
-mixin_id=openloader
