Added support for the Catalogue mod's menu icons.

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -14,6 +14,7 @@ authors="${mod_authors}"
 description='''
 ${mod_description}
 '''
+itemIcon="minecraft:book"
 
 [[dependencies.openloader]]
     modId="forge"
