--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 }
 
 plugins {
-    id 'fabric-loom' version '0.8-SNAPSHOT'
+    id 'fabric-loom' version '0.10-SNAPSHOT'
 	id 'com.matthewprenger.cursegradle' version '1.4.0'
     id 'maven-publish'
 }
@@ -57,7 +57,7 @@ dependencies {
 
 loom {
 
-    refmapName = 'openloader.refmap.json'
+    mixin.defaultRefmapName = 'mixins.openloader.refmap.json'
 }
 
 processResources {
