--- a/gradle.properties
+++ b/gradle.properties
@@ -7,12 +7,12 @@ mod_name=OpenLoader
 mod_version=3.0
 
 # Deps
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.64
+minecraft_version=1.18-rc3
+yarn_mappings=1.18-rc3+build.1
 loader_version=0.12.5
-fabric_version=0.43.1+1.17
+fabric_version=0.43.1+1.18
 
 # Curse properties
-curse_versions=1.17.1
+curse_versions=1.18
 curse_page=https://www.curseforge.com/minecraft/mc-mods/open-loader
 curse_project=354339
