Initial port to 1.18.1

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,26 +1,36 @@
-# Gralde properties
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
+# Project
+version=11.0
 group=net.darkhax.openloader
 
-# Mod Properties
-mod_version=9.0.
+# Common
+minecraft_version=1.18.1
+
+# Forge
+forge_version=39.0.9
+jei_version=9.0.0.40
+catalogue_version=3543625
+
+# Fabric
+fabric_version=0.45.0+1.18
+fabric_loader_version=0.12.12
+modmenu_version=3.0.0
+rei_version=7.0.346
+
+# Mod options
 mod_name=OpenLoader
-mod_vendor=Darkhax
-mod_download=https://www.curseforge.com/minecraft/mc-mods/open-loader
+mod_author=Darkhax
+mod_id=openloader
+mod_homepage=https://www.curseforge.com/minecraft/mc-mods/open-loader
+mod_source=https://github.com/Darkhax-Minecraft/Open-Loader
 mod_issues=https://github.com/Darkhax-Minecraft/Open-Loader/issues
-mod_authors=Darkhax
 mod_description=An open source data and resource loader.
+mod_license=LGPL V2.1
+mod_twitter=https://twitter.com/DarkhaxDev
+mod_discord=https://discord.darkhax.net
 
-# Dep Versions
-minecraft_version=1.16.5
-forge_version=1.16.5-36.0.15
-mcp_version=20201028-1.16.3
+# Gradle
+org.gradle.daemon=false
+org.gradle.jvmargs=-Xmx3G
 
-# Curse properties
-curse_versions=1.16.5
+# CurseForgeGradle
 curse_project=354339
-curse_page=https://www.curseforge.com/minecraft/mc-mods/open-loader
-
-# Mixins
-mixin_id=openloader
