--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,22 @@
-*.class
-*.iml
+# eclipse
+bin
+*.launch
+.settings
+.metadata
+.classpath
+.project
+
+# idea
+out
 *.ipr
 *.iws
-*.classpath
-*.project
-*.prefs
-*.launch
-/output
-/logs
+*.iml
+.idea
 
-#ForgeGradle
-/build
-/.gradle
-/eclipse/assets
-/libs
-/bin/
-/run/
-/Users/
-.factorypath
+# gradle
+build
+.gradle
+
+# other
+eclipse
+run
