--- a/Fabric/build.gradle
+++ b/Fabric/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"
     modImplementation "com.terraformersmc:modmenu:${modmenu_version}"
     modImplementation "me.shedaniel:RoughlyEnoughItems-fabric:${rei_version}"
-
+    implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.1'
     implementation project(":Common")
 }
 
