--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -1,13 +1,16 @@
 plugins {
-    id 'fabric-loom' version '1.0-SNAPSHOT'
-    id 'net.darkhax.curseforgegradle' version '1.0.11'
+    id 'fabric-loom'
+    id 'net.darkhax.curseforgegradle'
+    id 'com.modrinth.minotaur'
     id 'idea'
 }
 
 apply from: '../gradle/property_helper.gradle'
 apply from: '../gradle/patreon.gradle'
 
-archivesBaseName = "${mod_name}-Fabric-${minecraft_version}"
+base {
+    archivesName = "${mod_name}-Fabric-${minecraft_version}"
+}
 
 dependencies {
     minecraft "com.mojang:minecraft:${minecraft_version}"
@@ -15,7 +18,7 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_version}"
     implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.1'
-    implementation project(":Common")
+    implementation project(':common')
 }
 
 loom {
@@ -37,7 +40,7 @@ loom {
 
 processResources {
 
-    from project(":Common").sourceSets.main.resources
+    from project(':common').sourceSets.main.resources
 
     def buildProps = project.properties.clone()
 
@@ -64,8 +67,16 @@ processResources {
     }
 }
 
-tasks.withType(JavaCompile) {
-    source(project(":Common").sourceSets.main.allSource)
+tasks.withType(JavaCompile).configureEach {
+    source(project(':common').sourceSets.main.allSource)
+}
+
+tasks.withType(Javadoc).configureEach {
+    source(project(':common').sourceSets.main.allJava)
+}
+
+tasks.named("sourcesJar", Jar) {
+    from(project(':common').sourceSets.main.allSource)
 }
 
 // -- MAVEN PUBLISHING --
@@ -75,9 +86,8 @@ project.publishing {
 
         mavenJava(MavenPublication) {
 
-            artifactId project.archivesBaseName
-
-            from(components["java"])
+            artifactId = base.archivesName.get()
+            from components.java
         }
     }
 
@@ -112,6 +122,8 @@ task publishCurseForge(type: net.darkhax.curseforgegradle.TaskPublishCurseForge)
     mainFile.addJavaVersion('Java 17')
     mainFile.addModLoader('Fabric')
     mainFile.addModLoader('Quilt')
+    mainFile.releaseType = 'release'
+    mainFile.addGameVersion('Client', 'Server')
 
     // Append Patreon Supporters
     def patreonInfo = project.findProperty('patreon')
@@ -126,5 +138,26 @@ task publishCurseForge(type: net.darkhax.curseforgegradle.TaskPublishCurseForge)
 
             project.ext.curse_file_url = "${mod_homepage}/files/${mainFile.curseFileId}"
         }
+    }
+}
+
+// Modrinth
+modrinth {
+
+    def patreonInfo = project.findProperty('patreon')
+    def changelogText = project.ext.mod_changelog
+
+    if (patreonInfo) {
+        changelogText += "\n\nThis project is made possible by [Patreon](${patreonInfo.campaignUrlTracked}) support from players like you. Thank you!\n\n${patreonInfo.pledgeLog}"
+    }
+
+    token.set(project.findProperty('modrinth_auth'))
+    projectId.set(modrinth_project)
+    changelog = changelogText
+    versionName.set("${mod_name}-Fabric-${minecraft_version}-$version")
+    versionType.set("release")
+    uploadFile.set(tasks.remapJar)
+    dependencies {
+        required.project("fabric-api")
     }
 }
