--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,16 @@
 # Project
-version=17.0
+version=18.0
 group=net.darkhax.openloader
 
 # Common
-minecraft_version=1.19.4
+minecraft_version=1.20
 
 # Forge
-forge_version=45.0.9
+forge_version=46.0.14
 
 # Fabric
-fabric_version=0.76.0+1.19.4
-fabric_loader_version=0.14.17
+fabric_version=0.83.0+1.20
+fabric_loader_version=0.14.21
 
 # Mod options
 mod_name=OpenLoader
@@ -30,3 +30,6 @@ org.gradle.jvmargs=-Xmx3G
 
 # CurseForgeGradle
 curse_project=354339
+
+# Modrinth
+modrinth_project=KwWsINvD
