--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,20 @@
 # Project
-version=19.0
+version=20.0
 group=net.darkhax.openloader
 
 # Common
-minecraft_version=1.20.1
+minecraft_version=1.20.2
 
 # Forge
-forge_version=47.1.44
+forge_version=48.0.37
+
+# NeoForge
+neoforge_version=20.2.47-beta
+neoforge_version_range=20.2,
 
 # Fabric
-fabric_version=0.87.0+1.20.1
-fabric_loader_version=0.14.22
+fabric_version=0.90.7+1.20.2
+fabric_loader_version=0.14.24
 
 # Mod options
 mod_name=OpenLoader
