--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -166,4 +166,7 @@ modrinth {
     versionName.set("${mod_name}-NeoForge-${minecraft_version}-$version")
     versionType.set('release')
     uploadFile.set(tasks.jar)
+
+    loaders = ["neoforge"]
+    gameVersions = ["${minecraft_version}"]
 }
